--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -17,6 +17,6 @@
 ---
 
 - 정렬을 이용한다면?
-  - ![ex_screenshot](./img/2.jpg)
+  - ![ex_screenshot](pjw74/img/2.jpg)
   ***
   - 테스트는 통과하지만 <u>O(nlogn)</u>
