--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -11,12 +11,12 @@
     - -> _선형배열(linear array)_
     - 번호 말고 다른 것(예:문자열)로 접근할 수 있는 좋은 자료구조?
 
-![ex_screenshot](/img/1.jpg)
+![ex_screenshot](./img/1.jpg)
 
 2. 해시 테이블에 같은 칸에 사상(매핑)되면 <u>충돌(collision)</u>
 
 ---
 
-- 정렬을 이용한다면?
-  ![ex_screenshot](/img/2.jpg)
+- 정렬을 이용한다면?<br>  
+  ![ex_screenshot](./img/2.jpg)
   - 테스트는 통과하지만 <u>O(nlogn)</u>
