--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -1,10 +1,6 @@
-- 이해를 돕는 이미지 추가 예정
-
 ## <u>step 1-1: 해시(Hash) 문제 풀이</u>
 
-- **자료구조(와 알고리즘)의 선택**
-
----
+- ### 자료구조(와 알고리즘)의 선택
 
 1.  만약 이름 대신 번호가 주어졌다면?
 
@@ -13,10 +9,13 @@
 
 ![ex_screenshot](./img/1.jpg)
 
-2. 해시 테이블에 같은 칸에 사상(매핑)되면 <u>충돌(collision)</u>
-
 ---
 
+2. 해시 테이블에 같은 칸에 사상(매핑)되면 <u>충돌(collision)</u>
+
 - 정렬을 이용한다면?<br>  
-  ![ex_screenshot](./img/2.jpg)
+  ![this_screenshot](./img/2.jpg)
+
+  ***
+
   - 테스트는 통과하지만 <u>O(nlogn)</u>
