--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -7,7 +7,7 @@
     - -> _선형배열(linear array)_
     - 번호 말고 다른 것(예:문자열)로 접근할 수 있는 좋은 자료구조?
 
-![ex_screenshot](./img/1.jpg)
+![ex_screenshot](./img/11.png)
 
 ---
 
