--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -14,7 +14,7 @@
 2. 해시 테이블에 같은 칸에 사상(매핑)되면 <u>충돌(collision)</u>
 
 - 정렬을 이용한다면?<br>  
-  ![this_screenshot](./img/2.jpg)
+  ![this_screenshot](./img/22.png)
 
   ***
 
