--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -26,12 +26,12 @@
   - 알고리즘의 각 단계에서 그 순간에 최적이라고 생각되는 것을 선택
   - (탐욕법으로 최적해를 찾을 수 있는 문제): **현재의 선택이 마지막 해답의 최적성을 해치지 않을 때**
   - 빌려줄 학생들을 "정해진 순서"로 살피고 "정해준 순서"에 따라 우선하여 빌려줄 방향을 정해야 함<br>
-    ![ex_screenshot](./img/33.png)
+    ![ex_screenshot](./img/33.PNG)
   - 왼쪽 먼저 방식 채택하여 시뮬레이션
   ***
   <br>
     
-    ![this_screenshot](./img/44.png)
+    ![this_screenshot](./img/44.PNG)
     
     ---
 - 알고리즘 복잡도
