--- a/dev/04월/13일/04. day_04.md
+++ b/dev/04월/13일/04. day_04.md
@@ -35,5 +35,71 @@
     
     ---
 - 알고리즘 복잡도
-  - 주어진 배열 길이에 비례: O(n)
-  -
+  - 주어진 배열 길이에 비례: <span style="color:red">O(n)</span>
+- 방법(2)
+  - 만약 전체 학생 수가 매우 크다면?: 하지만 문제의 설질상 O(n)보다 낮은 복잡도 알고리즘은 어렵다
+  - <span style="color:red">그런데 여벌의 체육복을 가져온 학생이 매우 적다면?: </span>
+    - 여벌의 체육복을 가져온 학생들의 번호(reserve)를 <span style="color:violet">정렬(O(nlogn))</span>하고, 이것을 하나하나 순서대로 살펴보면서 <span style="color:red">빌려줄 수 있는 다른 학생을 찾아서</span>(해시적용 상수 시간에 처리) 처리
+- 알고리즘 복잡도
+  - 여벌의 체육복을 가져온 학생들의 번호(reserve)를 정렬 <br>
+    -> O(klogk)
+  - 체육복을 빌려줄 수 있는 학생을 찾아 처리 <br>
+    -> O(k) x O(1) = O(k)
+  - 전체: <span style="color:red">O(klogk)</span>
+
+## <u>step 3: 정렬(Sort) 문제 풀이</u>
+
+- 가장 큰 수
+  - 문제 해결 방법
+    <br>
+  1. 빈 문자열로 수를 초기화한다.
+  2. 가장 크게 만들 수 있는 수를 고른다.
+  3. 그 수를 현재 수에 이어 붙임
+  4. 모든 수를 다 사용할 때까지 반복
+
+<br> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+## <u>step 4: 탐욕법(Sort) 문제 풀이</u>
+
+- 큰 수 만들기 - 원칙
+  - 앞 자리에 큰 수가 오는 것이 전체를 크게 만듬
+    <br>-> 큰 것을 우선해서 골라 담자
+  - 방법
+    - 앞자리에서부터 하나씩 골라서 담되,
+    - 지금 담으려는 것보다 작은 것들은 도로 뺀다! 단, k 횟수가 남아있을 때까지
+
+---
+
+![this_screenshot](./img/6.PNG)
+
+---
+
+- 주어진 숫자로부터 하나씩 꺼내 모으되
+  - 이 때, 이미 모아둔 것중 지금 등장한 것보다 작은 것들은 빼낸다.
+  - <span style="color:red">이것은 어디서 어떻게??</span>
+- 이렇게 모은 숫자들을 자릿수 맞추어 반환
+  - 아직 뺄 개수(k)를 채우지 못한 경우
+  - <span style="color:red">자릿수는 어떻게 계산??</span>
+- 복잡도
+  - 가장 단순한 방법은 어떤 것일까?
+  - 설계한 알고리즘의 복잡도는?
+    - ~~O(n^2)~~
+    - O(n)
+-
