--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -2,8 +2,8 @@
 
 - 문제: 더 맵게
 
-  ![ex_screenshot](./img/1.png)
-  ![ex_screenshot](./img/2.png)
+  ![ex_screenshot](./img/1.PNG)
+  ![ex_screenshot](./img/2.PNG)
 
 - 배열 내 모든 원소가 k보다 클 때까지 반복
 
@@ -54,7 +54,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 - 깊이 우선 탐색(DFS; Depth-First Search)
   - 한 정점에서 인접한 모든 (아직 방문하지 않은)정점을 방문하되, 각 인접
     정점을 기준으로 깊이 우선 탐색을 끝낸 후 다음 정점으로 진행
-    ![ex_screenshot](./img/3.png)
+    ![ex_screenshot](./img/3.PNG)
     <span style="color:red">스택</span>을 이용: 어느 정점에서 DFS를 하고
     있는지를 기억하고 되돌아감
 
@@ -64,7 +64,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 
   - 한 정점에서 인접한 모든(아직 방문하지 않은)정점을 방문하고, 방문한 각
     인접 정점을 기준으로 (방문한 순서에 따라) 또다시 너비 우선 탐색을 행함
-    ![ex_screenshot](./img/4.png)
+    ![ex_screenshot](./img/4.PNG)
     <span style="color:red">큐</span>을 이용: 어느 정점에서 BFS를 해야 하는지를 기록하고 진행함
 
 - 문제 해결 - DFS 응용
@@ -76,7 +76,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
   - 한 정점에서 택할 수 있는 간선이 두개 이상인 경우?
     - 공항 이름의 알파벳 순서를 따른다.
 - 알고리즘의 동작
-  ![image.jpg1](./img/5.png) |![image.jpg2](./img/6.png)
+  ![image.jpg1](./img/5.PNG) |![image.jpg2](./img/6.PNG)
   --- | --- |
   <br>
 
@@ -85,7 +85,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
     -> 재귀적인 성질을 가진
     "그래프의 깊이 우선 탐색"을 응용
 - 코드 구현
-  ![image.jpg2](./img/7.png)
+  ![image.jpg2](./img/7.PNG)
 
 <br>
 <br>
@@ -98,7 +98,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 - 알고리즘의 진행에 따라 <span style="color:red">탐색해야 할 범위를 동적으로 결정</span>함으로써 탐색
   범위를 한정할 수 있음
 
-| ![image.jpg1](./img/8.png) | ![image.jpg2](./img/9.png) |
+| ![image.jpg1](./img/8.PNG) | ![image.jpg2](./img/9.PNG) |
 | -------------------------- | -------------------------- |
 
 <br>
