--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -109,3 +109,6 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 <br>
 <br>
 <br>
+
+<p style='color:red'>This is some red text.</p>
+<font color="red">This is some text!</font>
