--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -37,7 +37,7 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 
 ```
 
-- 알고리즘 복잡도 : <span style="color:red">O(nlogn)</span>
+- 알고리즘 복잡도 : ${\color{red}O(nlogn)}$
 
 <br>
 <br>
@@ -109,10 +109,3 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 <br>
 <br>
 <br>
-
-<p style='color:red'>This is some red text.</p>
-<font color="red">This is some text!</font>
-
-${\color{red}Red}$
-
-<span color="red">redtext</span>
