--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -10,18 +10,48 @@
 ---
 
 - 복잡도
+
   - 최악의 경우:
     - 수가 하나 남을 때까지 섞어야하는 경우 (n-1회)
-    -
+  - 각 단계("섞는 일")에서 요구되는 계산량:
+    - 정렬된 리스트에 순서 맞추어 원소 삽입
+    - O(n)
+
+- 방법: max heap, min heap을 고려할 것
+- heap: 최대/최소 원소를 빠르게 찾을 수 있음(상수시간)
+
+  - 힙 구성(heapify) \_\_ O(NlogN)
+  - 삽입(insert) \_\_ O(logN)
+  - 삭제(remove) \_\_ O(logN)
+
+<br>
+
+![ex_screenshot](./img/14.PNG)
+<br>
+
+- 최대 힙: 부모 노드의 키 값이 자식 노드의 키 값보다 크거나 같은
+  완전 이진 트리
+
+* 노드 관계
+  - 0-base
+    - 왼쪽 자식: (부모 index) x 2 + 1
+    - 오른쪽 자식: (부모 index) x 2 + 2
+    - 부모: (자식 index) / 2 - 1
+  - 편의상 0번째 배열 사용 x
+  - 1-base
+    - 왼쪽 자식: (부모 index) x 2
+    - 오른쪽 자식: (부모 index) x 2 + 1
+    - 부모: (자식 index) / 2
+
+<br>
+
+[출처] = https://velog.io/@redgem92/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-%ED%9E%99-%ED%8A%B8%EB%A6%ACHeap-Tree
 
 ---
 
-<br>
-추가
-
-<br>
-
----
+- 힙의 응용
+  - 정렬(heapsort)
+  - 우선 순위 큐(priority queue)
 
 <br>
 
@@ -52,10 +82,12 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 - 큐(queue)(FIFO)
 
 - 깊이 우선 탐색(DFS; Depth-First Search)
+
   - 한 정점에서 인접한 모든 (아직 방문하지 않은)정점을 방문하되, 각 인접
     정점을 기준으로 깊이 우선 탐색을 끝낸 후 다음 정점으로 진행
     ![ex_screenshot](./img/3.PNG)
-    <span style="color:red">스택</span>을 이용: 어느 정점에서 DFS를 하고
+
+    ${\color{red}스택}$을 이용: 어느 정점에서 DFS를 하고
     있는지를 기억하고 되돌아감
 
 <br>
@@ -65,7 +97,8 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
   - 한 정점에서 인접한 모든(아직 방문하지 않은)정점을 방문하고, 방문한 각
     인접 정점을 기준으로 (방문한 순서에 따라) 또다시 너비 우선 탐색을 행함
     ![ex_screenshot](./img/4.PNG)
-    <span style="color:red">큐</span>을 이용: 어느 정점에서 BFS를 해야 하는지를 기록하고 진행함
+
+    ${\color{red}큐}$를 이용: 어느 정점에서 BFS를 해야 하는지를 기록하고 진행함
 
 - 문제 해결 - DFS 응용
   - 한 붓 그리기!
@@ -95,17 +128,54 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 - 주어진 최적화 문제를 재귀적인 방식으로 보다 작은 부분 문제로 나누어
   부분 문제를 풀어서, 이 해를 조합하여 전체 문제의 해답에 이르는 방식
 
-- 알고리즘의 진행에 따라 <span style="color:red">탐색해야 할 범위를 동적으로 결정</span>함으로써 탐색
+- 알고리즘의 진행에 따라 ${\color{red}탐색해야 할 범위를 동적으로 결정}$함으로써 탐색
   범위를 한정할 수 있음
 
 | ![image.jpg1](./img/8.PNG) | ![image.jpg2](./img/9.PNG) |
 | -------------------------- | -------------------------- |
 
+- DP의 대표 예) Knapsack Problem
+
+  | ![image.jpg2](./img/10.PNG) |
+  | --------------------------- |
+
+- \*실습(N으로 표현)
+  ![image.jpg2](./img/11.PNG)
+  <br>
+
+  - 같은 부분 있는 것 착안
+
+  <br>
+
+  - **일반화**
+
+    ![image.jpg2](./img/13.PNG)
+
 <br>
+  
+- 요약
+  - 문제의 성질에 따라,
+    DP로 풀어냄으로써 탐색해야 하는 범위를 효과적으로 줄일 수 있을 
+    때 DP를 고려해볼 것
+
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+---
+
+- 문제 풀이
+
+- [특강]ChatGPT 활용하기
+  - 학습하는데 사용해보자
+    - 기술적 이야기
+      - LLM과 GPT와 ChatGPT 소개
+      - 문서 파싱으로 모델 러닝 패턴 분석 (자연스럽게
+        따라나오는 것)
+      - 사실을 기반으로 한 정보 입력이 중요하다
+  - 구글이 많은 기여
+    - 하둡 - 스카프
+- ChatGPT
+  - Prompts 엔지니어링 -> 질문의 중요성으로 대두
+  - 첫 질답에 이어서 다듬는 질문을 하면 원하는 것에 도달할 수
+    있음(단발성 질문 x)
+  - 생산성 증대 툴
+  - ${\color{red} 학습 커리큘럼에 활용}$해보자(참고 자료(문서, 링크)를 요구)
