--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -20,9 +20,9 @@
 - 방법: max heap, min heap을 고려할 것
 - heap: 최대/최소 원소를 빠르게 찾을 수 있음(상수시간)
 
-  - 힙 구성(heapify) \_\_ O(NlogN)
-  - 삽입(insert) \_\_ O(logN)
-  - 삭제(remove) \_\_ O(logN)
+  - 힙 구성(heapify) ${\color{red}O(NlogN)}$
+  - 삽입(insert) ${\color{red}O(logN)}$
+  - 삭제(remove) ${\color{red}O(logN)}$
 
 <br>
 
@@ -95,7 +95,9 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
 - 깊이 우선 탐색(DFS; Depth-First Search)
 
   - 한 정점에서 인접한 모든(아직 방문하지 않은)정점을 방문하고, 방문한 각
-    인접 정점을 기준으로 (방문한 순서에 따라) 또다시 너비 우선 탐색을 행함
+    인접 정점을 기준으로 (방문한 순서에 따라) 또다시 너비 우선
+    탐색을 행함
+
     ![ex_screenshot](./img/4.PNG)
 
     ${\color{red}큐}$를 이용: 어느 정점에서 BFS를 해야 하는지를 기록하고 진행함
