--- a/dev/04월/14일/04. day_05.md
+++ b/dev/04월/14일/04. day_05.md
@@ -181,3 +181,8 @@ heapq.heappush(L,x) # min heap L에 원소 x삽입
     있음(단발성 질문 x)
   - 생산성 증대 툴
   - ${\color{red} 학습 커리큘럼에 활용}$해보자(참고 자료(문서, 링크)를 요구)
+
+<br>
+
+**1. 이론 강의 추가할 부분 추가 진행** <br>
+**2. 선택 강의 문제 풀이 진행**
